--- a/projet_graphique/projet_bis/Makefile
+++ b/projet_graphique/projet_bis/Makefile
@@ -1,6 +1,6 @@
 CC=g++
 CCFLAGS= -Wall -std=c++11 -g
-SRC= etrevivant.cpp terre.cpp terre.cpp TestCase.cpp
+SRC= etrevivant.cpp terre.cpp ecosysteme.cpp terre.cpp TestCase.cpp
 OBJ= $(SRC:.cpp=.o)
 TST= $(TestCase.cpp)
 OBJ_TEST = $(filter-out main.o, $(OBJ)) $(TST:.cpp=.o)
